--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "i18next": "^22.4.15",
     "next": "13.4.1",
+    "next-i18next": "^13.2.2",
+    "next-intl": "^2.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.2",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "5.0.4"
   }
