--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "accept-language": "^3.0.18",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "i18next": "^22.4.15",
     "next": "13.4.1",
     "next-i18next": "^13.2.2",
-    "next-intl": "^2.14.0",
+    "next-intl": "^2.14.2",
+    "next-translate": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
